[project]
name = "slvrov-tools"
version = "0.1.40"
description = "Tools for math, networking, joysticks, I2C devices, and more for use in SLVROV."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Caleb Hofschneider", email = "calebhof11@gmail.com" },
]
requires-python = ">=3.7"
dependencies = [
    "smbus2>=0.4.1; sys_platform == 'linux'",
    "PySDL2>=0.9.7",
    "opencv-python>=4.12",
]

[project.scripts]
set-ip = "slvrov_tools.clis.set_ip:main"
udp-cam = "slvrov_tools.clis.gst_udp_cam:main"
install-ros2-jazzy = "slvrov_tools.clis.run_install_jazzy_ros2:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
slvrov_tools = [
    "*.bash",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = [
    "src",
]

[build-system]
requires = [
    "setuptools>=77.0.0",
    "wheel",
]
build-backend = "setuptools.build_meta"
