[project]
name = "slvrov-tools"
version = "0.1.49"
description = "Tools for math, networking, joysticks, I2C devices, and more for use in SLVROV."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Caleb Hofschneider", email = "calebhof11@gmail.com" },
]
requires-python = ">=3.7"
dependencies = [
    "opencv-python>=4.12",
]

[project.scripts]
set-ip = "slvrov_tools.clis.set_ip:main"
udp-cam = "slvrov_tools.clis.gst_udp_cam:main"

[tool.setuptools.package-data]
slvrov_tools = [
    "*.so",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = [
    "src",
]

[build-system]
requires = [
    "setuptools>=77.0.0",
    "wheel",
]
build-backend = "setuptools.build_meta"
